--- a/surveyform.html
+++ b/surveyform.html
@@ -3,45 +3,75 @@
 <html>
     <head>
         <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+        <script type="text/javascript" src="surveyform.js"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="surveyform.css">
         <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Marck+Script" rel="stylesheet">
         <title>Survey Form</title>
     </head>
     <body>
-        <h1 id="title">Software Developer's Survey Form</h1>
-        <p id="description">Ask Software developer with your experience.</p>
-        <form id="survey-form" action="submit">
-            <label id="name-label" for="name">Name: </label>
-            <input id="name" type="text" required placeholder="Please enter your name.">
-            <label id="email-label" for="email">E-mail: </label>
-            <input id="email" type="email" required placeholder="Please enter your e-mail address.">
-            <label id="number-label" for="number">How many years do you work in Software Development?</label>
-            <input id="number" type="number" min="1" max="99" placeholder="Please add a naumber.">
-            <label for="list">Which is your favorite programming language?</label>
-            <select name="list" id="dropdown">
-                <option value="csharp">C#</option>
-                <option value="java">Java</option>
-                <option value="c">C</option>
-                <option value="swift">Swift</option>
-            </select>
-            <fieldset>
-                <legend>What is your favorite IDE?</legend>
-                <input type="checkbox" name="ide" value="Visual Studio">Visual Studio <br>
-                <input type="checkbox" name="ide" value="Visual Studio Code">Visual Studio Code <br>
-                <input type="checkbox" name="ide" value="Xcode">Xcode <br>
-                <input type="checkbox" name="ide" value="Eclipse">Eclipse <br>
-            </fieldset>
-            <fieldset>
-                <legend>Do you have a non-profit project?</legend>
-                <input type="radio" name="project" value="Yes">Yes <br>
-                <input type="radio" name="project" value="No">No <br>
-            </fieldset>
-            <fieldset>
-                <legend>Comments: </legend>
-                <textarea name="Comment" id="comments" cols="30" rows="10"></textarea>
-            </fieldset>
-            <button class="btn btn-info" id="submit">Submit</button>
-        </form>
+        <div id="title-section">
+            <h1 id="title">Software Developer's Survey Form</h1>
+            <p id="description">Ask Software developer with your experience.</p>
+        </div>
+        <div id="form-section">
+            <form id="survey-form" action="submit">
+                <div id="person-section">
+                    <div id="name-section">
+                        <label id="name-label" for="name">Name: </label><br>
+                        <input id="name" type="text" required placeholder="Add Name">
+                    </div>
+                    <div id="email-section">
+                        <label id="email-label" for="email">E-mail: </label><br>
+                        <input id="email" type="email" required placeholder="Add e-mail address">
+                    </div>
+                    <div id="number-section">
+                        <label id="number-label" for="number">How many years do you work in Software Development?</label><br>
+                        <input id="number" type="number" min="1" max="99" placeholder="Add years">
+                    </div>
+                </div>
+                <div id="list-section">
+                    <label for="list">Which is your favorite programming language?</label><br>
+                    <select name="list" id="dropdown">
+                        <option value="csharp">C#</option>
+                        <option value="java">Java</option>
+                        <option value="c">C</option>
+                        <option value="swift">Swift</option>
+                    </select>
+                </div>                
+                <div id="checkbox-section">
+                    <fieldset>
+                        <legend>What is your favorite IDE? </legend>
+                        <input type="checkbox" name="ide" value="Visual Studio"> Visual Studio <br>
+                        <input type="checkbox" name="ide" value="Visual Studio Code"> Visual Studio Code <br>
+                        <input type="checkbox" name="ide" value="Xcode"> Xcode <br>
+                        <input type="checkbox" name="ide" value="Eclipse"> Eclipse 
+                    </fieldset>
+                </div>
+                <div id="radio-section">
+                    <fieldset>
+                        <legend>Do you have a non-profit project?</legend>
+                        <input type="radio" name="project" value="Yes"> Yes
+                        <input type="radio" name="project" value="No"> No 
+                    </fieldset>
+                </div>
+                <div id="comment-section">
+                    <fieldset>
+                        <legend>Comments: </legend>
+                        <textarea name="comment" id="comments" cols="30" rows="10"></textarea>
+                    </fieldset>
+                </div>
+                <div id="button-section">
+                    <button class="btn btn-info" id="submit">Submit</button>
+                </div>
+            </form>
+        </div>
+        <footer id="footer-info">
+            <p>Created by Petra Rabai</p>
+        </footer>
     </body>
 </html>
